--- a/core/.env.example
+++ b/core/.env.example
@@ -46,3 +46,27 @@ HEADLESS=false
 # Saves cookies, history, localStorage like a real browser
 # Leave empty to use default: data/browser-profile
 BROWSER_PROFILE_DIR=
+
+# ================================
+# Rate Limiter Configuration
+# ================================
+# Enable/disable rate limiting (default: true)
+RATE_LIMIT_ENABLED=true
+
+# Requests per minute (default: 60)
+RATE_LIMIT_RPM=60
+
+# Requests per day (default: 1500)
+RATE_LIMIT_RPD=1500
+
+# Minimum delay between requests in ms (default: 100)
+RATE_LIMIT_MIN_DELAY=100
+
+# Max retries on rate limit error (default: 3)
+RATE_LIMIT_MAX_RETRIES=3
+
+# Initial retry delay in ms (default: 1000)
+RATE_LIMIT_RETRY_DELAY=1000
+
+# Retry delay multiplier for exponential backoff (default: 2)
+RATE_LIMIT_RETRY_MULTIPLIER=2
