--- a/core/package.json
+++ b/core/package.json
@@ -15,7 +15,8 @@
     "test:cookies": "node src/scripts/test-cookies.js",
     "start:http": "node servers/http-server.js",
     "start:mcp": "node servers/mcp-server.js",
-    "watch:mcp": "npx nodemon servers/mcp-server.js"
+    "watch:mcp": "npx nodemon servers/mcp-server.js",
+    "cli": "node src/scripts/direct-cli.js"
   },
   "keywords": [
     "html",
