--- a/servers/package.json
+++ b/servers/package.json
@@ -8,7 +8,7 @@
         "start:http": "node http-server.js",
         "start:mcp": "node mcp-server.js",
         "watch:mcp": "npx nodemon mcp-server.js",
-        "generate:tools": "node ../generate-tools.js"
+        "generate:tools": "node generate-tools.js"
     },
     "keywords": [
         "mcp",
